force-app/main/default/objects/Product2/fields/Association_ID__c.field-meta.xml
<CustomField>
    <fullName>Association_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Association ID</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produits</relationshipLabel>
    <relationshipName>Produits</relationshipName>
    <type>Lookup</type>
</CustomField>