force-app/main/default/objects/Product2/fields/Chute__c.field-meta.xml
<CustomField>
    <fullName>Chute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chute</label>
    <type>Checkbox</type>
</CustomField>