force-app/main/default/objects/Product2/fields/Code_article__c.field-meta.xml
<CustomField>
    <fullName>Code_article__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Code article</label>
    <length>255</length>
    <type>Text</type>
</CustomField>