force-app/main/default/objects/Product2/fields/Conversion_setmeter__c.field-meta.xml
<CustomField>
    <fullName>Conversion_setmeter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conversion setmeter</label>
    <type>Checkbox</type>
</CustomField>