force-app/main/default/objects/Product2/fields/Designation_article__c.field-meta.xml
<CustomField>
    <fullName>Designation_article__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Désignation article</label>
    <length>33</length>
    <type>Text</type>
</CustomField>