force-app/main/default/objects/Product2/fields/Magasin__c.field-meta.xml
<CustomField>
    <fullName>Magasin__c</fullName>
    <label>Magasin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STOCK GENERAL</fullName>
            </value>
            <value>
                <fullName>STOCK SAV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>