force-app/main/default/objects/Product2/fields/Pack_Initial_Pager__c.field-meta.xml
<CustomField>
    <fullName>Pack_Initial_Pager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pack Initial Pager</label>
    <type>Checkbox</type>
</CustomField>