force-app/main/default/objects/Product2/fields/Pack_initial_pager_et_setmeter__c.field-meta.xml
<CustomField>
    <fullName>Pack_initial_pager_et_setmeter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pack initial pager et setmeter</label>
    <type>Checkbox</type>
</CustomField>