force-app/main/default/objects/Product2/fields/Pack_Initial_Pager_ROAv3_Setmeter__c.field-meta.xml
<CustomField>
    <fullName>Pack_Initial_Pager_ROAv3_Setmeter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pack Initial Pager ROAv3 Setmeter</label>
    <type>Checkbox</type>
</CustomField>