force-app/main/default/objects/Product2/fields/Produit_generique__c.field-meta.xml
<CustomField>
    <fullName>Produit_generique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Produit générique</label>
    <type>Checkbox</type>
</CustomField>