force-app/main/default/objects/Product2/fields/Reference_fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Reference_fournisseur__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Référence fournisseur</label>
    <length>33</length>
    <type>Text</type>
</CustomField>