force-app/main/default/objects/Product2/fields/Remplacement_materiel__c.field-meta.xml
<CustomField>
    <fullName>Remplacement_materiel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remplacement matériel</label>
    <type>Checkbox</type>
</CustomField>