force-app/main/default/objects/Product2/fields/Renvoi_Beacon__c.field-meta.xml
<CustomField>
    <fullName>Renvoi_Beacon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renvoi Beacon</label>
    <type>Checkbox</type>
</CustomField>