force-app/main/default/objects/Product2/fields/Seuil__c.field-meta.xml
<CustomField>
    <fullName>Seuil__c</fullName>
    <label>Seuil d&apos;alerte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>