force-app/main/default/objects/Product2/fields/Sous_famille__c.field-meta.xml
<CustomField>
    <fullName>Sous_famille__c</fullName>
    <label>Sous-famille</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>AUDI</fullName>
            </value>
            <value>
                <fullName>COMP</fullName>
            </value>
            <value>
                <fullName>CONSO</fullName>
            </value>
            <value>
                <fullName>PERIPH</fullName>
            </value>
            <value>
                <fullName>TV+WEB</fullName>
            </value>
            <value>
                <fullName>MEDIAMAT</fullName>
            </value>
            <value>
                <fullName>TV WEB</fullName>
            </value>
            <value>
                <fullName>CONS</fullName>
                <isActive>false</isActive>
                <label>CONS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>