force-app/main/default/objects/Product2/fields/Stock_s_rialis__c.field-meta.xml
<CustomField>
    <fullName>Stock_s_rialis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stock sérialisé</label>
    <type>Checkbox</type>
</CustomField>