force-app/main/default/objects/Product2/fields/Type_de_produit__c.field-meta.xml
<CustomField>
    <fullName>Type_de_produit__c</fullName>
    <label>Type de produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beacon</fullName>
            </value>
            <value>
                <fullName>Routeur Google</fullName>
            </value>
            <value>
                <fullName>Pager</fullName>
            </value>
            <value>
                <fullName>Setmeter</fullName>
            </value>
            <value>
                <fullName>TVM3</fullName>
            </value>
            <value>
                <fullName>Accessoire</fullName>
            </value>
            <value>
                <fullName>Périphérique</fullName>
            </value>
            <value>
                <fullName>Consommable</fullName>
            </value>
            <value>
                <fullName>Composant</fullName>
            </value>
            <value>
                <fullName>Pack Pager</fullName>
            </value>
            <value>
                <fullName>Pack SetMeter</fullName>
            </value>
            <value>
                <fullName>DMD NON COM</fullName>
            </value>
            <value>
                <fullName>DMD COM</fullName>
            </value>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>Streaming Meter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>