force-app/main/default/objects/Product2/listViews/Tous_les_produits_Cordon.listView-meta.xml
<ListView>
    <fullName>Tous_les_produits_Cordon</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Code_article_prestataire__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>AIP</value>
    </filters>
    <label>Tous les produits Cordon</label>
</ListView>