force-app/main/default/objects/Product2/listViews/Tous_les_produits_IMS.listView-meta.xml
<ListView>
    <fullName>Tous_les_produits_IMS</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>MEDIAMAT</value>
    </filters>
    <label>Tous les produits IMS</label>
</ListView>